# docs/swagger.json
@@ -12,9 +12,9 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/errors": {
+        "/errors/{domain}": {
             "post": {
-                "description": "Get possible solutions for an error",
+                "description": "Get possible solutions for an error by domain",
                 "consumes": [
                     "application/json"
                 ],
@@ -27,12 +27,24 @@
                 "summary": "Get error resolution",
                 "parameters": [
                     {
+                        "enum": [
+                            "kubernetes",
+                            "github",
+                            "argocd"
+                        ],
+                        "type": "string",
+                        "description": "Domain (kubernetes, github, argocd)",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "Error details and context",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/hefestus-api_internal_models.ErrorRequest"
+                            "$ref": "#/definitions/models.ErrorRequest"
                         }
                     }
                 ],
@@ -40,7 +52,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/hefestus-api_internal_models.ErrorResponse"
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
                     "400": {
@@ -66,7 +78,7 @@
         }
     },
     "definitions": {
-        "hefestus-api_internal_models.ErrorRequest": {
+        "models.ErrorRequest": {
             "type": "object",
             "properties": {
                 "context": {
@@ -79,18 +91,18 @@
                 }
             }
         },
-        "hefestus-api_internal_models.ErrorResponse": {
+        "models.ErrorResponse": {
             "type": "object",
             "properties": {
                 "error": {
-                    "$ref": "#/definitions/hefestus-api_internal_models.ErrorSolution"
+                    "$ref": "#/definitions/models.ErrorSolution"
                 },
                 "message": {
                     "type": "string"
                 }
             }
         },
-        "hefestus-api_internal_models.ErrorSolution": {
+        "models.ErrorSolution": {
             "type": "object",
             "properties": {
                 "causa": {
